@@ -11,6 +11,7 @@ Stable versions
 	- add volume boost option to Android application preferences
 	- add stereo and panning options to Android application preferences
 	- add list of supported formats to Android application menu
+	- add list of instruments to Android application
 	- code cleanup
 
 3.2.0 (20100530):
